tests/compile-fail/compile_fail__type_error__const__ternary_cond.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: type error
   ┌─ <input>:27:12
   │
27 │       F0 = 1.5 ? 1.0 : 2.0;  
   │            ^^^ - expects an integer
   │            │    
   │            a float


